--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "acacha/admin-lte-template-laravel": "4.*",
         "barryvdh/laravel-debugbar": "^2.4",
         "laravel/framework": "5.4.*",
+        "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
         "orangehill/iseed": "dev-master"
